Atualizando arquivos do projeto

--- a/DevFreela/DevFreela.API/appsettings.json
+++ b/DevFreela/DevFreela.API/appsettings.json
@@ -2,12 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "OpeningTime": {
     "StartAt": "08:00:00",
-    "FinishAt": "18:00:00"
+    "FinishAt":  "18:00:00"
   }
 }
